# prism

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.data-plane  Makefile  PRISM_DOCS.md  README.md  docker-compose.yml  prism.spec  pyproject.toml
.github/workflows/: docker-publish.yml  helm-publish.yml  publish-langchain.yml  release.yml
data/: colab-canonicalizer-outline.md  guard-policies-endpoint-implementation-v2.md
data/cleanup/: CLEANUP_GUIDE.md  cleanup-backup-20260125-225317.txt  cleanup-deprecated.sh
data_plane/proto/: rule_installation.proto
data_plane/tupl_dp/bridge/: Cargo.toml  test_header_size.rs
data_plane/tupl_dp/bridge/examples/: inspect_anchors.rs  scheduler_integration.rs
data_plane/tupl_dp/bridge/src/: api_types.rs  bridge.rs  enforcement_engine.rs  grpc_server.rs  main.rs  rule_vector.rs  vector_comparison.rs
data_plane/tupl_dp/bridge/src/refresh/: mod.rs  scheduler.rs  service.rs
data_plane/tupl_dp/bridge/src/storage/: cold_storage.rs  db_infra.rs  mod.rs  types.rs  warm_storage.rs
data_plane/tupl_dp/bridge/src/telemetry/: mod.rs  query.rs  recorder.rs  session.rs  writer.rs
data_plane/tupl_dp/bridge/tests/: hot_cache_lru_tests.rs  test_serialization.rs
deployment/: .env.example  Dockerfile.security  deploy-local.sh  deploy-production.sh  docker-compose.local.yml  docker-compose.production.yml  nginx.console.conf  supervisord.conf
docker/: Dockerfile.data-plane  Dockerfile.management-plane  Dockerfile.proxy
docs/implementation/: 00-enforcement-flow-trace.md  02-canonicalization-plan.md  03-storage-warm-cold.md  04-week2-completion-summary.md  04-week3-plan.md  05-week3-completion-summary.md  06-scheduled-refresh-implementation.md  07-scheduler-integration.md  08-lru-eviction-policy.md  10-tiered-storage-bridge-integration.md
docs/migration/: SECURITY_CHECKLIST.md  cleanup-git-history.sh
docs/plans/: 2025-11-21-remote-enforcement-grpc-proxy.md
guard_mcp_client/: client.py
helm/prism/: Chart.yaml  values.yaml
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/prism/: __init__.py
integrations/langchain/prism/langchain/: __init__.py  callback.py
integrations/langchain/prism/langchain/prompts/: infer_tool_intent.yaml
management_plane/: pyproject.toml  run.sh
management_plane/app/: auth.py  chroma_client.py  enforcement_identity.py  main.py  models.py  rule_installer.py  settings.py  telemetry_models.py
prism_cli/: prism.py
scripts/: seed_test_ctix_allow.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css  (+1 more)
(+62 files in other folders)
