# Root pyproject.toml for Semantic Security MVP monorepo
# This defines the workspace structure for uv

[project]
name = "semantic-security-mvp"
version = "0.1.0"
description = "LLM-based security policy enforcement using vector embeddings"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "grpcio>=1.76.0",
    "protobuf>=6.33.1",
]

[tool.uv.workspace]
members = [
    "management_plane",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "grpcio-tools>=1.76.0",
]
