[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-prism"
version = "0.1.0"
description = "LangChain integration for Prism policy enforcement"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1,<2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/fencio-dev/prism"

[tool.hatch.build.targets.wheel]
packages = ["prism"]
